# zego_server_assistant

./: README.md
.github/workflows/: sync2gitee.yml
.net/: README.md  README_EN.md
.net/demo/WindowsFormsApp1/: Form1.cs  WindowsFormsApp1.csproj
.net/src/ZegoServerAssistant/: GenerateToken.cs
c++/: CMakeLists.txt  README.md
c++/cmake/: zego.cmake
c++/kernel/: CMakeLists.txt  include.cmake  setting.cmake  sources.cmake
c++/kernel/impl/: ZegoServerAssistantImpl.h
c++/kernel/modules/common/: Base64.cc  CMakeLists.txt  ZegoCrypto.cpp  json_tools.hpp
c++/kernel/modules/common/crypto-algorithms/: CMakeLists.txt
go/: README.md  README_EN.md  go.mod
go/zegoserverassistant/: token.go
go/zegoserverassistant/errors/: errors.go
java/: .classpath  README.md
java/src/im/zego/serverassistant/: ZegoServerAssistant.java
nodejs/: README.md
nodejs/server/: zegoServerAssistant.js  zegoServerAssistant.ts
nodejs/test/: index.js
php/: README.en.md  README.md
php/src/ZEGO/: ZegoServerAssistant.php
php/test/: test.php
python/: README.md
python/test/: test.py
token/: README.md
token/.net/: README.md
token/.net/demo/WindowsFormsApp1/Properties/: AssemblyInfo.cs
token/.net/src/: ZegoServerAssistant.sln
token/.net/token03/demo/WindowsFormsApp1/: Form1.cs
token/.net/token04/: README.md  README_EN.md
token/.net/token04/demo/: WindowsFormsApp1.sln
token/c++/: README_EN.md
token/c++/kernel/impl/: ZegoServerAssistantImpl.h
token/c++/sample/token04/demo/: CMakeLists.txt  main.cc
token/c++/src/token/: CMakeLists.txt
token/c++/src/token/kernel/: setting.cmake  sources.cmake
token/c++/src/token/kernel/include/: ZegoServerAssistantDefines.h
token/c++/src/token/kernel/modules/common/: CMakeLists.txt  ZegoCrypto.cpp
token/c++/test/: CMakeLists.txt
token/c++/token03/kernel/: linkList.cmake
token/c++/token04/: CMakeLists.txt  README.md  README_EN.md
token/c++/token04/cmake/: zego.cmake
token/c++/token04/kernel/impl/: ZegoServerAssistant.cpp  ZegoServerAssistantImpl.cpp  ZegoServerAssistantImpl.h
token/c++/token04/kernel/include/: ZegoServerAssistant.h  ZegoServerAssistantDefines.h
token/c++/token04/sample/: CMakeLists.txt
token/c++/token04/sample/demo/: CMakeLists.txt  main.cc
token/go/sample/token03/: sample.go
token/go/sample/token04/: sample-base.go  sample-for-rtcroom.go  sample.go
token/go/sample/token04-rtcroom/: sample.go
token/go/src/: go.mod
token/go/src/errors/: errors.go
token/go/src/token/: token.go  token_test.go
token/go/src/token03/: README.md  token03.go  token03_test.go
token/go/src/token04/: README.md  README_EN.md  token04.go  token04_test.go
token/go/src/token04-rtcroom/: README.md  README_EN.md  token04_rtcroom.go  token04_rtcroom_test.go
token/go/src/util/: aes.go  pack.go  unpack.go
token/go/zegoserverassistant/: token_test.go
token/java/: README_EN.md  pom.xml
token/java/token04/: README.md  README_EN.md
token/nodejs/: README_EN.md
token/nodejs/server/: zegoServerAssistant.ts
token/nodejs/token03/: 用户权限控制.md
token/nodejs/token03/test/: index.js
token/nodejs/token04/: README.md  README_EN.md
token/nodejs/token04/sample/: sample-base.js  sample-rtc-room.js  sample.js
token/nodejs/token04/server/: zegoServerAssistant.js  zegoServerAssistant.ts
token/nodejs/token04/test/: index.js  rtc-room.js
token/oc/: README.md  README_EN.md  sample-for-rtcroom.mm  sample.mm
token/oc/token04/: Base64.h  ZegoCrypto.cpp  ZegoCrypto.hpp  ZegoServerAssistant.cpp  ZegoServerAssistant.h  ZegoServerAssistantDefines.h  ZegoServerAssistantImpl.cpp  ZegoServerAssistantImpl.h  ZegoToken.h  ZegoToken.mm  json_tools.hpp
token/php/token03-php5.6+/: README.md  README_EN.md
token/php/token04/: README.md  README_EN.md  auto_loader.php
token/php/token04-php5.6+/: README.md  README_EN.md  composer.json
token/php/token04-php5.6+/test/: composer.json  test.php  testComposer.php  testForRtcRoom.php
token/php/token04/test/: test.php  testForRtcRoom.php
token/python/: README.md
token/python/token03/: README_EN.md
token/python/token03/src/: zego_server_assistant.py
token/python/token04/: README.md  README_EN.md
token/python/token04/src/: __init__.py  token04.py
token/python/token04/test/: base_sample.py  rtcroom_sample.py  test.py  test_rtcroom.py
(+36 files in other folders)
